--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,12 @@
 ipywidgets==8.1.5
 notebook==7.3.2
-pt-youtube==1.1.7
+py-youtube>=1.1.7
 ensure==1.0.4
 
 pytest==8.3.4
 tox==4.23.2
-black==24.10.0
+black==23.1.0
 flake8==7.1.1
 mypy==1.14.1
 
--e.
+#-e.
