--- a/.github/workflows/continous_integration.yml
+++ b/.github/workflows/continous_integration.yml
@@ -27,7 +27,7 @@ jobs:
                     - 3.12
         steps:
             - uses: actions/checkout@v3
-            - name: 'Set up pyhton ${{ matrix.python-version }}'
+            - name: 'Set up python ${{ matrix.python-version }}'
                 uses: actions/setup-python@v4
                 with:
                     python-version: ${{ matrix.python-version }}
