--- a/.github/workflows/continous_integration.yml
+++ b/.github/workflows/continous_integration.yml
@@ -1,40 +1,37 @@
 name: Python application (linklns)
 'on':
-    push:
-        branches:
-            - main
-        paths-ignore:
-            README.md
-    pull_request:
-        branches:
-            - main
-        paths-ignore:
-            README.md
+  push:
+    branches:
+      - main
+    paths-ignore: README.md
+  pull_request:
+    branches:
+      - main
+    paths-ignore: README.md
 permissions:
-    contents: read
+  contents: read
 jobs:
-    build:
-        runs-on: '${{matrix.os}}'
-        strategy:
-            matrix:
-                os:
-                    - ubuntu-latest
-                    - windows-latest
-                python-version: 
-                    - 3.9
-                    - 3.10
-                    - 3.11
-                    - 3.12
-        steps:
-            - uses: actions/checkout@v3
-            - name: 'Set up python ${{ matrix.python-version }}'
-              uses: actions/setup-python@v4
-              with:
-                python-version: ${{ matrix.python-version }}
-            - name: Install dependencies
-              run: |
-                python -m pip install --upgrade pip
-                pip install flake8 pytest tox tox-gh-actions
-                pip install -r requirements.txt
-            - name: Test with tox
-              run: tox
+  build:
+    runs-on: '${{matrix.os}}'
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+        python-version:
+          - 3.9
+          - 3.1
+          - 3.11
+          - 3.12
+    steps:
+      - uses: actions/checkout@v3
+      - name: 'Set up python ${{ matrix.python-version }}'
+        uses: actions/setup-python@v4
+        with:
+          python-version: '${{ matrix.python-version }}'
+      - name: Install dependencies
+        run: >-
+          python -m pip install --upgrade pip pip install flake8 pytest tox
+          tox-gh-actions pip install -r requirements.txt
+      - name: Test with tox
+        run: tox
