updated main to master code format

--- a/.github/workflows/continous_integration.yml
+++ b/.github/workflows/continous_integration.yml
@@ -2,11 +2,11 @@ name: Python application (linklns)
 'on':
   push:
     branches:
-      - main
+      - master
     paths-ignore: README.md
   pull_request:
     branches:
-      - main
+      - master
     paths-ignore: README.md
 permissions:
   contents: read
