--- a/tox.ini
+++ b/tox.ini
@@ -11,3 +11,9 @@ python=
 [testenv]
 deps = -rrequirements_dev.txt
 commands =
+    #python syntax error or undefined name
+    flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
+    flake8 src --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    mypy src/
+    pytest -v tests/unit
+    pytest -v tests/integration
