--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,9 @@ jobs:
         with:
           python-version: '${{ matrix.python-version }}'
       - name: Install dependencies
-        run: >-
-          python -m pip install --upgrade pip pip install flake8 pytest tox
-          tox-gh-actions pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest tox tox-gh-actions 
+          pip install -r requirements.txt
       - name: Test with tox
         run: tox
